coommit after Mentor 2

--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,7 @@ body {
 }
 
 .button-hero:hover,
-.button-hero:focus,
-.button-hero:active {
+.button-hero:focus {
   background-color: var(--bt-acc-color);
 }
 
