my last changes

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,8 @@ body {
 }
 
 .button-hero:hover,
-.button-hero:focus {
+.button-hero:focus,
+.button-hero:active {
   background-color: var(--bt-acc-color);
 }
 
